mucking around with file merge process

--- a/pipeline_testing.ipynb
+++ b/pipeline_testing.ipynb
@@ -16,7 +16,7 @@
     "    - ``|user_id|device_id|disease|personal_information|``\n",
     "- access respective user_id data folder\n",
     "- pull in data from prespective device_id EDF data file \n",
-    "    - ``|device_id|type|time|value|``\n",
+    "    - ``|user_id|device_id|type|time|value|``\n",
     "- convert EDF to pandas dataframe\n",
     "- merge required files together (for respective calculation)"
    ]
@@ -55,6 +55,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user = 'user_001'\n",
+    "user_folder = data_path + user"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [],
@@ -83,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -107,83 +117,166 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>dX</th>\n",
+       "      <th>value</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>device_id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>-2.000000</td>\n",
+       "      <td>user_001</td>\n",
+       "      <td>device_001</td>\n",
+       "      <td>dX</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>-1.007812</td>\n",
+       "      <td>user_001</td>\n",
+       "      <td>device_001</td>\n",
+       "      <td>dX</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>-1.001953</td>\n",
+       "      <td>user_001</td>\n",
+       "      <td>device_001</td>\n",
+       "      <td>dX</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>-1.001953</td>\n",
+       "      <td>user_001</td>\n",
+       "      <td>device_001</td>\n",
+       "      <td>dX</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>-1.004883</td>\n",
+       "      <td>user_001</td>\n",
+       "      <td>device_001</td>\n",
+       "      <td>dX</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6914555</td>\n",
        "      <td>-1.035156</td>\n",
+       "      <td>user_001</td>\n",
+       "      <td>device_001</td>\n",
+       "      <td>dX</td>\n",
+       "      <td>6914555</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6914556</td>\n",
        "      <td>-1.009766</td>\n",
+       "      <td>user_001</td>\n",
+       "      <td>device_001</td>\n",
+       "      <td>dX</td>\n",
+       "      <td>6914556</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6914557</td>\n",
        "      <td>-1.005859</td>\n",
+       "      <td>user_001</td>\n",
+       "      <td>device_001</td>\n",
+       "      <td>dX</td>\n",
+       "      <td>6914557</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6914558</td>\n",
        "      <td>-1.019531</td>\n",
+       "      <td>user_001</td>\n",
+       "      <td>device_001</td>\n",
+       "      <td>dX</td>\n",
+       "      <td>6914558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6914559</td>\n",
        "      <td>-1.033203</td>\n",
+       "      <td>user_001</td>\n",
+       "      <td>device_001</td>\n",
+       "      <td>dX</td>\n",
+       "      <td>6914559</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6914560 rows × 1 columns</p>\n",
+       "<p>6914560 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               dX\n",
-       "0       -2.000000\n",
-       "1       -1.007812\n",
-       "2       -1.001953\n",
-       "3       -1.001953\n",
-       "4       -1.004883\n",
-       "...           ...\n",
-       "6914555 -1.035156\n",
-       "6914556 -1.009766\n",
-       "6914557 -1.005859\n",
-       "6914558 -1.019531\n",
-       "6914559 -1.033203\n",
+       "            value   user_id   device_id type     time\n",
+       "0       -2.000000  user_001  device_001   dX        0\n",
+       "1       -1.007812  user_001  device_001   dX        1\n",
+       "2       -1.001953  user_001  device_001   dX        2\n",
+       "3       -1.001953  user_001  device_001   dX        3\n",
+       "4       -1.004883  user_001  device_001   dX        4\n",
+       "...           ...       ...         ...  ...      ...\n",
+       "6914555 -1.035156  user_001  device_001   dX  6914555\n",
+       "6914556 -1.009766  user_001  device_001   dX  6914556\n",
+       "6914557 -1.005859  user_001  device_001   dX  6914557\n",
+       "6914558 -1.019531  user_001  device_001   dX  6914558\n",
+       "6914559 -1.033203  user_001  device_001   dX  6914559\n",
        "\n",
-       "[6914560 rows x 1 columns]"
+       "[6914560 rows x 5 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "convert_data_file(data_path, 'dX.edf')"
+    "# currently just looking at random sample file with only one col\n",
+    "d = convert_data_file(user_folder+'/raw_data/', 'dX.edf')\n",
+    "\n",
+    "# making it into the basic format I would expect to pull out of EDF\n",
+    "d['user_id'] = user\n",
+    "d['device_id'] = 'device_001'\n",
+    "d['type'] = 'dX'\n",
+    "d['time'] = d.index\n",
+    "\n",
+    "d = d.rename(columns={d.columns[0]:'value'})\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pass in two dfs at a time to merge\n",
+    "def merge_files(master_df, df):\n",
+    "    # assuming the master df is in correct folder\n",
+    "    \n",
+    "    # prep the df so that it is in the correct format for merging\n",
+    "    df = df.rename(columns={'value':df.type.unique()[0]})\n",
+    "    df = df.drop(['type','device_id'], 1)\n",
+    "   \n",
+    "    # might have to sort the time indices, but that depends on how they are \n",
+    "    # formatted and the likelihood of differences across devices\n",
+    "    merge_df = pd.merge(master_df,\n",
+    "                        df,\n",
+    "                        left_on=['user_id','time'], \n",
+    "                        right_on=['user_id','time'],\n",
+    "                        how='outer')\n",
+    "    \n",
+    "    return merge_df"
    ]
   },
   {
