wrote out initial hr portion of stress detection algorithm; identified a couple of things to fix

--- a/algorithm_implementation.ipynb
+++ b/algorithm_implementation.ipynb
@@ -143,6 +143,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# instantiating variables\n",
+    "# this window and shift doesn't work, becauses it is based on a certain number of indexes, whereas the paper was talking about 560RR intervals\n",
+    "# will need to fix and update this\n",
+    "sampling_frequency = 100 # this is whatever the hardware gives us\n",
+    "\n",
+    "window_size = 560\n",
+    "shift = 20\n",
+    "n_intervals = 4\n",
+    "\n",
+    "start_index = 0\n",
+    "end_index = window_size\n",
+    "\n",
+    "mean_bpm_shift = 5\n",
+    "rmssd_shift = -9\n",
+    "pnn50_shift = -9\n",
+    "\n",
+    "stress_event = False\n",
+    "stress_results = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_percent_difference(first_val, second_val):\n",
+    "   \n",
+    "    diff = ((second_val - first_val) / first_val)*100\n",
+    "    \n",
+    "    return diff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# have to find a way to deal with this edge case in which we don't have 560 points before the end of the data set\n",
+    "while end_index <= len(df.value):\n",
+    "    \n",
+    "    \n",
+    "    # grab window\n",
+    "    window = df.value[start_index : end_index]\n",
+    "    \n",
+    "    # split window into n intervals\n",
+    "    intervals = [window[x : x + int(window_size/n_intervals)] for x in range(start_index, end_index, int(window_size/n_intervals))]\n",
+    "    \n",
+    "    mean_bpm = []\n",
+    "    rmssd = []\n",
+    "    pnn50 = []\n",
+    "    \n",
+    "    for i in intervals:\n",
+    "        working_data, measures = hp.process(i, sampling_frequency)\n",
+    "        \n",
+    "        mean_bpm.append(measures['bpm'])\n",
+    "        rmssd.append(measures['rmssd'])\n",
+    "        pnn50.append(measures['pnn50'])\n",
+    "        \n",
+    "    # compare hrv features\n",
+    "    mean_bpm_diff = find_percent_difference(mean_bpm[0], mean_bpm[n_intervals-1])\n",
+    "    rmssd_diff = find_percent_difference(rmssd[n_intervals-2], rmssd[n_intervals-1])\n",
+    "    pnn50_diff = find_percent_difference(pnn50[n_intervals-2], pnn50[n_intervals-1])\n",
+    "\n",
+    "    # see if features depict stress\n",
+    "    if (mean_bpm_diff > mean_bpm_shift) and (rmssd_diff < rmssd_shift) and (pnn50_diff < pnn50_shift):\n",
+    "        stress_event = True\n",
+    "        \n",
+    "    elif (mean_bpm_diff < -mean_bpm_shift) and (rmssd_diff > -rmssd_shift) and (pnn50_diff > -pnn50_shift):\n",
+    "        stress_event = False\n",
+    "    \n",
+    "    # push stress result\n",
+    "    stress_results.append(stress_event)\n",
+    "    \n",
+    "    start_index = start_index + shift\n",
+    "    end_index = end_index + shift"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
