update to iterate through RR waves rather than indices

--- a/stress_detection.ipynb
+++ b/stress_detection.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Algorithm implementation notebook"
+    "# Stress Detection Notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,16 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1c24c51fd0>]"
+       "[<matplotlib.lines.Line2D at 0x1c256bc4a8>]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        " 'breathingrate': 0.12804097311139565}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,28 +143,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hr\n",
+      "peaklist\n",
+      "ybeat\n",
+      "rolling_mean\n",
+      "RR_list\n",
+      "RR_indices\n",
+      "RR_diff\n",
+      "RR_sqdiff\n",
+      "rrsd\n",
+      "best\n",
+      "removed_beats\n",
+      "removed_beats_y\n",
+      "binary_peaklist\n",
+      "RR_masklist\n",
+      "RR_list_cor\n",
+      "nn20\n",
+      "nn50\n",
+      "poincare\n",
+      "breathing_signal\n",
+      "breathing_psd\n",
+      "breathing_frq\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in working_data:\n",
+    "    print(key)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2406"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "working_data['peaklist'][-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "# instantiating variables\n",
-    "# this window and shift doesn't work, becauses it is based on a certain number of indexes, whereas the paper was talking about 560RR intervals\n",
-    "# will need to fix and update this\n",
-    "sampling_frequency = 100 # this is whatever the hardware gives us\n",
+    "sampling_frequency = 100 # hardware sampling freq --> value:115kHz\n",
     "\n",
-    "window_size = 560\n",
-    "shift = 20\n",
+    "window_size = 5 # number of RR waves --> value: 560\n",
+    "shift = 2 # number of RR waves to shift over --> value: 20\n",
     "n_intervals = 4\n",
-    "\n",
-    "start_index = 0\n",
-    "end_index = window_size\n",
     "\n",
     "mean_bpm_shift = 5\n",
     "rmssd_shift = -9\n",
@@ -193,10 +239,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hr_data, hr_measures = hp.process(df.value, sampling_frequency)\n",
+    "\n",
+    "# find the first peak for the start of the window\n",
+    "# find the 560th peak for the end of the window\n",
+    "s = 0\n",
+    "e = window_size\n",
+    "start_index = hr_data['peaklist'][s]\n",
+    "end_index = hr_data['peaklist'][e]\n",
     "\n",
     "# have to find a way to deal with this edge case in which we don't have 560 points before the end of the data set\n",
-    "while end_index <= len(df.value):\n",
-    "    \n",
+    "# don't look at anything beyond the last RR wave\n",
+    "while end_index <= hr_data['peaklist'][-1]:\n",
     "    \n",
     "    # grab window\n",
     "    window = df.value[start_index : end_index]\n",
@@ -230,8 +284,39 @@
     "    # push stress result\n",
     "    stress_results.append(stress_event)\n",
     "    \n",
-    "    start_index = start_index + shift\n",
-    "    end_index = end_index + shift"
+    "    s = s + shift\n",
+    "    e = e + shift\n",
+    "    \n",
+    "    start_index = hr_data['peaklist'][s]\n",
+    "    end_index =  hr_data['peaklist'][e]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'meas' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-52-7fecec9bb021>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmeas\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'meas' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "meas"
    ]
   },
   {
@@ -243,26 +328,6 @@
     "# the pan tompkins detector seems to be the most used R peak detector\n",
     "# assuming that this returns a list of peak indices\n",
     "r_peaks = detectors.pan_tompkins_detector(unfiltered_ecg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### function for calculating bpm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_bpm(data, r_peaks):\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
    ]
   }
  ],
