--- a/stress_detection.ipynb
+++ b/stress_detection.ipynb
@@ -45,17 +45,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pulling data and visualizing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1c256bc4a8>]"
+       "[<matplotlib.lines.Line2D at 0x1c256e1240>]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -76,15 +83,6 @@
     "data, _ = hp.load_exampledata(0)\n",
     "df = pd.DataFrame(data).rename(columns={0:'value'})\n",
     "plt.plot(df.value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "working_data, measures = hp.process(df.value, 100)"
    ]
   },
   {
@@ -110,106 +108,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 48,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'bpm': 58.898847631242,\n",
-       " 'ibi': 1018.695652173913,\n",
-       " 'sdnn': 65.76006108019,\n",
-       " 'sdsd': 34.866925292300195,\n",
-       " 'rmssd': 64.73723110319973,\n",
-       " 'pnn20': 0.8636363636363636,\n",
-       " 'pnn50': 0.4090909090909091,\n",
-       " 'hr_mad': 40.0,\n",
-       " 'sd1': 45.75807746062504,\n",
-       " 'sd2': 82.92683223259064,\n",
-       " 's': 11921.000815765336,\n",
-       " 'sd1/sd2': 0.5517885614186272,\n",
-       " 'breathingrate': 0.12804097311139565}"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "measures"
+    "testing the HRV portion of the stress detection algo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hr\n",
-      "peaklist\n",
-      "ybeat\n",
-      "rolling_mean\n",
-      "RR_list\n",
-      "RR_indices\n",
-      "RR_diff\n",
-      "RR_sqdiff\n",
-      "rrsd\n",
-      "best\n",
-      "removed_beats\n",
-      "removed_beats_y\n",
-      "binary_peaklist\n",
-      "RR_masklist\n",
-      "RR_list_cor\n",
-      "nn20\n",
-      "nn50\n",
-      "poincare\n",
-      "breathing_signal\n",
-      "breathing_psd\n",
-      "breathing_frq\n"
-     ]
-    }
-   ],
-   "source": [
-    "for key in working_data:\n",
-    "    print(key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2406"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "working_data['peaklist'][-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
     "# instantiating variables\n",
     "sampling_frequency = 100 # hardware sampling freq --> value:115kHz\n",
     "\n",
-    "window_size = 5 # number of RR waves --> value: 560\n",
-    "shift = 2 # number of RR waves to shift over --> value: 20\n",
+    "window_size = 10 # number of RR waves --> value: 560\n",
+    "shift = 4 # number of RR waves to shift over --> value: 20\n",
     "n_intervals = 4\n",
     "\n",
     "mean_bpm_shift = 5\n",
@@ -222,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,24 +161,35 @@
     "s = 0\n",
     "e = window_size\n",
     "start_index = hr_data['peaklist'][s]\n",
-    "end_index = hr_data['peaklist'][e]\n",
-    "\n",
+    "end_index = hr_data['peaklist'][e]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# have to find a way to deal with this edge case in which we don't have 560 points before the end of the data set\n",
     "# don't look at anything beyond the last RR wave\n",
     "while end_index <= hr_data['peaklist'][-1]:\n",
+    "    print (end_index)\n",
     "    \n",
-    "    # grab window\n",
-    "    window = df.value[start_index : end_index]\n",
+    "    # grab window -- bit hacky\n",
+    "    window = pd.DataFrame(hr_data['hr'][start_index : end_index])\n",
+    "    window = window.value\n",
     "    \n",
     "    # split window into n intervals\n",
-    "    intervals = [window[x : x + int(window_size/n_intervals)] for x in range(start_index, end_index, int(window_size/n_intervals))]\n",
+    "    intervals = [window[x : x + int(len(window)/n_intervals)] for x in range(0, len(window), int(len(window)/n_intervals))]\n",
     "    \n",
     "    mean_bpm = []\n",
     "    rmssd = []\n",
     "    pnn50 = []\n",
     "    \n",
     "    for i in intervals:\n",
-    "        working_data, measures = hp.process(i, sampling_frequency)\n",
+    "        prep_df = pd.DataFrame(i).rename(columns={0:'value'})\n",
+    "        # erroring out right now because there I'm testing with a data set that is too small\n",
+    "        interval_data, measures = hp.process(prep_df.value, sampling_frequency)\n",
     "        \n",
     "        mean_bpm.append(measures['bpm'])\n",
     "        rmssd.append(measures['rmssd'])\n",
@@ -284,50 +210,12 @@
     "    # push stress result\n",
     "    stress_results.append(stress_event)\n",
     "    \n",
+    "    # update window indices\n",
     "    s = s + shift\n",
     "    e = e + shift\n",
     "    \n",
     "    start_index = hr_data['peaklist'][s]\n",
     "    end_index =  hr_data['peaklist'][e]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'meas' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-7fecec9bb021>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmeas\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'meas' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "meas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# the pan tompkins detector seems to be the most used R peak detector\n",
-    "# assuming that this returns a list of peak indices\n",
-    "r_peaks = detectors.pan_tompkins_detector(unfiltered_ecg)"
    ]
   }
  ],
